# mcmc-rs

./: .gitignore  Cargo.toml  README.md  data.py  plot.py  plot.sh  test_beta.csv
src/: DistrWrapper.rs  distr_builder.rs  distr_wrapper.rs  main.rs  sampler.rs  sampler_linreg.rs  utils.rs
