[package]
name = "mcmc-rs"
version = "0.1.0"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ndarray = { version = "0.13.0", features = ["blas"] }
# blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
# openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
rayon = "1.1"
num_cpus = "1.13.0"
compute = "0.1"
fastrand = "1.3.5"

[profile.release]
debug = true
